# robot_lab

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTORS.md  LICENCE  MJDATA.TXT  MUJOCO_LOG.TXT  README.md  README_TEMPLATE.md  gen_tree.py  li.py  mujoco_him.py  project_directory.md  pyproject.toml  refere.md  run_mujoco.py  sim_m.py  source_directory.md
.cursor/: settings.json
.cursor/commands/: cost.md
.github/: LICENSE_HEADER.txt  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug_report.yml  config.yml  question.md
.github/workflows/: pre-commit.yaml
docker/: Dockerfile  docker-compose.yaml
exts/ext_template/: setup.py
exts/ext_template/config/: extension.toml
exts/ext_template/ext_template/: ui_extension_example.py
exts/real_robot/config/: extension.toml
exts/real_robot_lab/: setup.py
exts/real_robot_lab/config/: extension.toml
exts/real_robot_lab/real_robot_lab/: ui_extension_example.py
exts/robot_lab/: setup.py
exts/robot_lab/amp_utils/: __init__.py
exts/robot_lab/config/: extension.toml
exts/robot_lab/robot_lab/: __init__.py  ui_extension_example.py
real_robot/: setup.py
real_robot/real_robot/: ui_extension_example.py
scripts/: rename_template.py
scripts/cusrl/: cusrl_utils.py  play.py  train.py
scripts/reinforcement_learning/: rl_utils.py
scripts/reinforcement_learning/cusrl/: play.py  train.py
scripts/reinforcement_learning/rsl_rl/: cli_args.py  play.py  (+2 more)
scripts/rsl_rl/: cli_args.py  play.py  play_amp.py  replay_amp_data.py  rsl_rl_utils.py  train.py  train_amp.py
scripts/skrl/: play.py  train.py
scripts/tools/: check_robot.py  clean_trash.py  convert_mjcf.py  convert_urdf.py  convert_urdf_v1.py  list_envs.py  random_agent.py  sync_training_scripts.sh  train_batch.py  zero_agent.py
source/robot_lab/: pyproject.toml  setup.py
source/robot_lab/data/Robots/Booster/T1/t1_description/: CMakeLists.txt  README.md  package.xml  robot.urdf
source/robot_lab/data/Robots/Booster/T1/t1_description/config/: visualize.rviz
source/robot_lab/data/Robots/Booster/T1/t1_description/launch/: visualize.launch.py
source/robot_lab/data/Robots/Booster/T1/t1_description/meshes/: Crank_Down_Left.STL  Crank_Up_Left.STL  Down_Left_XX_Ball.STL  Link_Long_Right.STL  Link_Short_Left.STL  Link_Short_Right.STL  Up_Right_XX_Ball.STL
source/robot_lab/data/Robots/Booster/T1/t1_description/xacro/: robot.xacro
(+873 files in other folders)
